# fiscal

./: .gitignore  README.md  pyproject.toml  tox.ini
brass/: abstract_bands.py  abstract_calculation.py  allocators.py  band_factory.py  bands.py  calculation.py  liability.py  simple_calculation.py
tests/: test_allocator.py  test_calculation.py  test_calculation_simple.py
